cmake_minimum_required(VERSION 3.0.2)

project(icu VERSION 52)

#add all sources files
set(
  source_files
  ./source/common/errorcode.cpp
  ./source/common/putil.cpp
  ./source/common/umath.c
  ./source/common/utypes.c
  ./source/common/uinvchar.c
  ./source/common/umutex.cpp
  ./source/common/ucln_cmn.c
  ./source/common/uinit.cpp
  ./source/common/uobject.cpp
  ./source/common/cmemory.c
  ./source/common/charstr.cpp
  ./source/common/udata.cpp
  ./source/common/ucmndata.c
  ./source/common/udatamem.c
  ./source/common/umapfile.c
  ./source/common/udataswp.c
  ./source/common/ucol_swp.cpp
  ./source/common/utrace.c
  ./source/common/uhash.c
  ./source/common/uhash_us.cpp
  ./source/common/uenum.c
  ./source/common/ustrenum.cpp
  ./source/common/uvector.cpp
  ./source/common/ustack.cpp
  ./source/common/uvectr32.cpp
  ./source/common/uvectr64.cpp
  ./source/common/ucnv.c
  ./source/common/ucnv_bld.cpp
  ./source/common/ucnv_cnv.c
  ./source/common/ucnv_io.cpp
  ./source/common/ucnv_cb.c
  ./source/common/ucnv_err.c
  ./source/common/ucnvlat1.c
  ./source/common/ucnv_u7.c
  ./source/common/ucnv_u8.c
  ./source/common/ucnv_u16.c
  ./source/common/ucnv_u32.c
  ./source/common/ucnvscsu.c
  ./source/common/ucnvbocu.cpp
  ./source/common/ucnv_ext.cpp
  ./source/common/ucnvmbcs.c
  ./source/common/ucnv2022.cpp
  ./source/common/ucnvhz.c
  ./source/common/ucnv_lmb.c
  ./source/common/ucnvisci.c
  ./source/common/ucnvdisp.c
  ./source/common/ucnv_set.c
  ./source/common/ucnv_ct.c
  ./source/common/uresbund.cpp
  ./source/common/ures_cnv.c
  ./source/common/uresdata.c
  ./source/common/resbund.cpp
  ./source/common/resbund_cnv.cpp
  ./source/common/messagepattern.cpp
  ./source/common/ucat.c
  ./source/common/locmap.c
  ./source/common/uloc.cpp
  ./source/common/locid.cpp
  ./source/common/locutil.cpp
  ./source/common/locavailable.cpp
  ./source/common/locdispnames.cpp
  ./source/common/loclikely.cpp
  ./source/common/locresdata.cpp
  ./source/common/bytestream.cpp
  ./source/common/stringpiece.cpp
  ./source/common/stringtriebuilder.cpp
  ./source/common/bytestriebuilder.cpp
  ./source/common/bytestrie.cpp
  ./source/common/bytestrieiterator.cpp
  ./source/common/ucharstrie.cpp
  ./source/common/ucharstriebuilder.cpp
  ./source/common/ucharstrieiterator.cpp
  ./source/common/dictionarydata.cpp
  ./source/common/appendable.cpp
  ./source/common/ustr_cnv.c
  ./source/common/unistr_cnv.cpp
  ./source/common/unistr.cpp
  ./source/common/unistr_case.cpp
  ./source/common/unistr_props.cpp
  ./source/common/utf_impl.c
  ./source/common/ustring.cpp
  ./source/common/ustrcase.cpp
  ./source/common/ucasemap.cpp
  ./source/common/ucasemap_titlecase_brkiter.cpp
  ./source/common/cstring.c
  ./source/common/ustrfmt.c
  ./source/common/ustrtrns.cpp
  ./source/common/ustr_wcs.cpp
  ./source/common/utext.cpp
  ./source/common/unistr_case_locale.cpp
  ./source/common/ustrcase_locale.cpp
  ./source/common/unistr_titlecase_brkiter.cpp
  ./source/common/ustr_titlecase_brkiter.cpp
  ./source/common/normalizer2impl.cpp
  ./source/common/normalizer2.cpp
  ./source/common/filterednormalizer2.cpp
  ./source/common/normlzr.cpp
  ./source/common/unorm.cpp
  ./source/common/unormcmp.cpp
  ./source/common/unorm_it.c
  ./source/common/chariter.cpp
  ./source/common/schriter.cpp
  ./source/common/uchriter.cpp
  ./source/common/uiter.cpp
  ./source/common/patternprops.cpp
  ./source/common/uchar.c
  ./source/common/uprops.cpp
  ./source/common/ucase.cpp
  ./source/common/propname.cpp
  ./source/common/ubidi_props.c
  ./source/common/ubidi.c
  ./source/common/ubidiwrt.c
  ./source/common/ubidiln.c
  ./source/common/ushape.cpp
  ./source/common/uscript.c
  ./source/common/uscript_props.cpp
  ./source/common/usc_impl.c
  ./source/common/unames.cpp
  ./source/common/utrie.cpp
  ./source/common/utrie2.cpp
  ./source/common/utrie2_builder.cpp
  ./source/common/bmpset.cpp
  ./source/common/unisetspan.cpp
  ./source/common/uset_props.cpp
  ./source/common/uniset_props.cpp
  ./source/common/uniset_closure.cpp
  ./source/common/uset.cpp
  ./source/common/uniset.cpp
  ./source/common/usetiter.cpp
  ./source/common/ruleiter.cpp
  ./source/common/caniter.cpp
  ./source/common/unifilt.cpp
  ./source/common/unifunct.cpp
  ./source/common/uarrsort.c
  ./source/common/brkiter.cpp
  ./source/common/ubrk.cpp
  ./source/common/brkeng.cpp
  ./source/common/dictbe.cpp
  ./source/common/rbbi.cpp
  ./source/common/rbbidata.cpp
  ./source/common/rbbinode.cpp
  ./source/common/rbbirb.cpp
  ./source/common/rbbiscan.cpp
  ./source/common/rbbisetb.cpp
  ./source/common/rbbistbl.cpp
  ./source/common/rbbitblb.cpp
  ./source/common/serv.cpp
  ./source/common/servnotf.cpp
  ./source/common/servls.cpp
  ./source/common/servlk.cpp
  ./source/common/servlkf.cpp
  ./source/common/servrbf.cpp
  ./source/common/servslkf.cpp
  ./source/common/uidna.cpp
  ./source/common/usprep.cpp
  ./source/common/uts46.cpp
  ./source/common/punycode.cpp
  ./source/common/util.cpp
  ./source/common/util_props.cpp
  ./source/common/parsepos.cpp
  ./source/common/locbased.cpp
  ./source/common/cwchar.c
  ./source/common/wintz.c
  ./source/common/dtintrv.cpp
  ./source/common/ucnvsel.cpp
  ./source/common/propsvec.c
  ./source/common/ulist.c
  ./source/common/uloc_tag.c
  ./source/common/icudataver.c
  ./source/common/icuplug.c
  ./source/common/listformatter.cpp
  ./source/i18n/ucln_in.c
  ./source/i18n/fmtable.cpp
  ./source/i18n/format.cpp
  ./source/i18n/msgfmt.cpp
  ./source/i18n/umsg.cpp
  ./source/i18n/numfmt.cpp
  ./source/i18n/unum.cpp
  ./source/i18n/decimfmt.cpp
  ./source/i18n/dcfmtsym.cpp
  ./source/i18n/ucurr.cpp
  ./source/i18n/digitlst.cpp
  ./source/i18n/fmtable_cnv.cpp
  ./source/i18n/choicfmt.cpp
  ./source/i18n/datefmt.cpp
  ./source/i18n/smpdtfmt.cpp
  ./source/i18n/reldtfmt.cpp
  ./source/i18n/dtfmtsym.cpp
  ./source/i18n/udat.cpp
  ./source/i18n/dtptngen.cpp
  ./source/i18n/udatpg.cpp
  ./source/i18n/nfrs.cpp
  ./source/i18n/nfrule.cpp
  ./source/i18n/nfsubs.cpp
  ./source/i18n/rbnf.cpp
  ./source/i18n/numsys.cpp
  ./source/i18n/unumsys.cpp
  ./source/i18n/ucsdet.cpp
  ./source/i18n/ucal.cpp
  ./source/i18n/calendar.cpp
  ./source/i18n/gregocal.cpp
  ./source/i18n/timezone.cpp
  ./source/i18n/simpletz.cpp
  ./source/i18n/olsontz.cpp
  ./source/i18n/astro.cpp
  ./source/i18n/taiwncal.cpp
  ./source/i18n/buddhcal.cpp
  ./source/i18n/persncal.cpp
  ./source/i18n/islamcal.cpp
  ./source/i18n/japancal.cpp
  ./source/i18n/gregoimp.cpp
  ./source/i18n/hebrwcal.cpp
  ./source/i18n/indiancal.cpp
  ./source/i18n/chnsecal.cpp
  ./source/i18n/cecal.cpp
  ./source/i18n/coptccal.cpp
  ./source/i18n/dangical.cpp
  ./source/i18n/ethpccal.cpp
  ./source/i18n/coleitr.cpp
  ./source/i18n/coll.cpp
  ./source/i18n/tblcoll.cpp
  ./source/i18n/sortkey.cpp
  ./source/i18n/bocsu.cpp
  ./source/i18n/ucoleitr.cpp
  ./source/i18n/ucol.cpp
  ./source/i18n/ucol_res.cpp
  ./source/i18n/ucol_bld.cpp
  ./source/i18n/ucol_sit.cpp
  ./source/i18n/ucol_tok.cpp
  ./source/i18n/ucol_wgt.cpp
  ./source/i18n/ucol_cnt.cpp
  ./source/i18n/ucol_elm.cpp
  ./source/i18n/strmatch.cpp
  ./source/i18n/usearch.cpp
  ./source/i18n/search.cpp
  ./source/i18n/stsearch.cpp
  ./source/i18n/translit.cpp
  ./source/i18n/utrans.cpp
  ./source/i18n/esctrn.cpp
  ./source/i18n/unesctrn.cpp
  ./source/i18n/funcrepl.cpp
  ./source/i18n/strrepl.cpp
  ./source/i18n/tridpars.cpp
  ./source/i18n/cpdtrans.cpp
  ./source/i18n/rbt.cpp
  ./source/i18n/rbt_data.cpp
  ./source/i18n/rbt_pars.cpp
  ./source/i18n/rbt_rule.cpp
  ./source/i18n/rbt_set.cpp
  ./source/i18n/nultrans.cpp
  ./source/i18n/remtrans.cpp
  ./source/i18n/casetrn.cpp
  ./source/i18n/titletrn.cpp
  ./source/i18n/tolowtrn.cpp
  ./source/i18n/toupptrn.cpp
  ./source/i18n/anytrans.cpp
  ./source/i18n/name2uni.cpp
  ./source/i18n/uni2name.cpp
  ./source/i18n/nortrans.cpp
  ./source/i18n/quant.cpp
  ./source/i18n/transreg.cpp
  ./source/i18n/brktrans.cpp
  ./source/i18n/regexcmp.cpp
  ./source/i18n/rematch.cpp
  ./source/i18n/repattrn.cpp
  ./source/i18n/regexst.cpp
  ./source/i18n/regextxt.cpp
  ./source/i18n/regeximp.cpp
  ./source/i18n/uregex.cpp
  ./source/i18n/uregexc.cpp
  ./source/i18n/ulocdata.c
  ./source/i18n/measfmt.cpp
  ./source/i18n/currfmt.cpp
  ./source/i18n/curramt.cpp
  ./source/i18n/currunit.cpp
  ./source/i18n/measure.cpp
  ./source/i18n/utmscale.c
  ./source/i18n/csdetect.cpp
  ./source/i18n/csmatch.cpp
  ./source/i18n/csr2022.cpp
  ./source/i18n/csrecog.cpp
  ./source/i18n/csrmbcs.cpp
  ./source/i18n/csrsbcs.cpp
  ./source/i18n/csrucode.cpp
  ./source/i18n/csrutf8.cpp
  ./source/i18n/inputext.cpp
  ./source/i18n/wintzimpl.cpp
  ./source/i18n/windtfmt.cpp
  ./source/i18n/winnmfmt.cpp
  ./source/i18n/basictz.cpp
  ./source/i18n/dtrule.cpp
  ./source/i18n/rbtz.cpp
  ./source/i18n/tzrule.cpp
  ./source/i18n/tztrans.cpp
  ./source/i18n/vtzone.cpp
  ./source/i18n/zonemeta.cpp
  ./source/i18n/upluralrules.cpp
  ./source/i18n/plurrule.cpp
  ./source/i18n/plurfmt.cpp
  ./source/i18n/selfmt.cpp
  ./source/i18n/dtitvfmt.cpp
  ./source/i18n/dtitvinf.cpp
  ./source/i18n/udateintervalformat.cpp
  ./source/i18n/tmunit.cpp
  ./source/i18n/tmutamt.cpp
  ./source/i18n/tmutfmt.cpp
  ./source/i18n/currpinf.cpp
  ./source/i18n/uspoof.cpp
  ./source/i18n/uspoof_impl.cpp
  ./source/i18n/uspoof_build.cpp
  ./source/i18n/uspoof_conf.cpp
  ./source/i18n/uspoof_wsconf.cpp
  ./source/i18n/decfmtst.cpp
  ./source/i18n/smpdtfst.cpp
  ./source/i18n/ztrans.cpp
  ./source/i18n/zrule.cpp
  ./source/i18n/vzone.cpp
  ./source/i18n/fphdlimp.cpp
  ./source/i18n/fpositer.cpp
  ./source/i18n/locdspnm.cpp
  ./source/i18n/decNumber.c
  ./source/i18n/decContext.c
  ./source/i18n/alphaindex.cpp
  ./source/i18n/tznames.cpp
  ./source/i18n/tznames_impl.cpp
  ./source/i18n/tzgnames.cpp
  ./source/i18n/tzfmt.cpp
  ./source/i18n/compactdecimalformat.cpp
  ./source/i18n/gender.cpp
  ./source/i18n/region.cpp
  ./source/i18n/scriptset.cpp
  ./source/i18n/identifier_info.cpp
  ./source/i18n/uregion.cpp
  ./source/io/locbund.cpp
  ./source/io/ufile.c
  ./source/io/ufmt_cmn.c
  ./source/io/uprintf.c
  ./source/io/uprntf_p.c
  ./source/io/uscanf.c
  ./source/io/uscanf_p.c
  ./source/io/ustdio.c
  ./source/io/sprintf.c
  ./source/io/sscanf.c
  ./source/io/ustream.cpp
  ./source/io/ucln_io.c
)

set(
  include_files
  ./source/common/bmpset.h
  ./source/common/messageimpl.h
  ./source/common/rbbitblb.h
  ./source/common/ucln_cmn.h
  ./source/common/uinvchar.h
  ./source/common/ustr_imp.h
  ./source/common/brkeng.h
  ./source/common/msvcres.h
  ./source/common/ruleiter.h
  ./source/common/ucln_imp.h
  ./source/common/ulist.h
  ./source/common/ustrenum.h
  ./source/common/charstr.h
  ./source/common/mutex.h
  ./source/common/serv.h
  ./source/common/ucmndata.h
  ./source/common/ulocimp.h
  ./source/common/ustrfmt.h
  ./source/common/cmemory.h
  ./source/common/normalizer2impl.h
  ./source/common/servloc.h
  ./source/common/ucnv_bld.h
  ./source/common/umapfile.h
  ./source/common/util.h
  ./source/common/cmutex.h
  ./source/common/patternprops.h
  ./source/common/servnotf.h
  ./source/common/ucnv_cnv.h
  ./source/common/umutex.h
  ./source/common/utracimp.h
  ./source/common/cpputils.h
  ./source/common/propname.h
  ./source/common/sprpimpl.h
  ./source/common/ucnv_ext.h
  ./source/common/unisetspan.h
  ./source/common/utrie.h
  ./source/common/cstring.h
  ./source/common/propname_data.h
  ./source/common/uarrsort.h
  ./source/common/ucnv_imp.h
  ./source/common/unorm_it.h
  ./source/common/utrie2.h
  ./source/common/cwchar.h
  ./source/common/propsvec.h
  ./source/common/uassert.h
  ./source/common/ucnv_io.h
  ./source/common/unormimp.h
  ./source/common/utrie2_impl.h
  ./source/common/dictbe.h
  ./source/common/punycode.h
  ./source/common/ubidi_props.h
  ./source/common/ucnvmbcs.h
  ./source/common/uposixdefs.h
  ./source/common/utypeinfo.h
  ./source/common/dictionarydata.h
  ./source/common/putilimp.h
  ./source/common/ubidi_props_data.h
  ./source/common/ucol_data.h
  ./source/common/uprops.h
  ./source/common/uvector.h
  ./source/common/hash.h
  ./source/common/rbbidata.h
  ./source/common/ubidiimp.h
  ./source/common/ucol_swp.h
  ./source/common/uresdata.h
  ./source/common/uvectr32.h
  ./source/common/icuplugimp.h
  ./source/common/rbbinode.h
  ./source/common/ubrkimpl.h
  ./source/common/udatamem.h
  ./source/common/uresimp.h
  ./source/common/uvectr64.h
  ./source/common/localsvc.h
  ./source/common/rbbirb.h
  ./source/common/ucase.h
  ./source/common/udataswp.h
  ./source/common/ureslocs.h
  ./source/common/wintz.h
  ./source/common/locbased.h
  ./source/common/rbbirpt.h
  ./source/common/ucase_props_data.h
  ./source/common/uelement.h
  ./source/common/usc_impl.h
  ./source/common/locmap.h
  ./source/common/rbbiscan.h
  ./source/common/uchar_props_data.h
  ./source/common/uenumimp.h
  ./source/common/uset_imp.h
  ./source/common/locutil.h
  ./source/common/rbbisetb.h
  ./source/common/ucln.h
  ./source/common/uhash.h
  ./source/common/ustr_cnv.h
  ./source/common/unicode/appendable.h
  ./source/common/unicode/idna.h
  ./source/common/unicode/resbund.h
  ./source/common/unicode/uchriter.h
  ./source/common/unicode/unifilt.h
  ./source/common/unicode/ushape.h
  ./source/common/unicode/brkiter.h
  ./source/common/unicode/listformatter.h
  ./source/common/unicode/schriter.h
  ./source/common/unicode/uclean.h
  ./source/common/unicode/unifunct.h
  ./source/common/unicode/usprep.h
  ./source/common/unicode/bytestream.h
  ./source/common/unicode/localpointer.h
  ./source/common/unicode/std_string.h
  ./source/common/unicode/ucnv.h
  ./source/common/unicode/unimatch.h
  ./source/common/unicode/ustring.h
  ./source/common/unicode/bytestrie.h
  ./source/common/unicode/locid.h
  ./source/common/unicode/strenum.h
  ./source/common/unicode/ucnv_cb.h
  ./source/common/unicode/uniset.h
  ./source/common/unicode/ustringtrie.h
  ./source/common/unicode/bytestriebuilder.h
  ./source/common/unicode/messagepattern.h
  ./source/common/unicode/stringpiece.h
  ./source/common/unicode/ucnv_err.h
  ./source/common/unicode/unistr.h
  ./source/common/unicode/utext.h
  ./source/common/unicode/caniter.h
  ./source/common/unicode/normalizer2.h
  ./source/common/unicode/stringtriebuilder.h
  ./source/common/unicode/ucnvsel.h
  ./source/common/unicode/unorm.h
  ./source/common/unicode/utf.h
  ./source/common/unicode/chariter.h
  ./source/common/unicode/normlzr.h
  ./source/common/unicode/symtable.h
  ./source/common/unicode/uconfig.h
  ./source/common/unicode/unorm2.h
  ./source/common/unicode/utf16.h
  ./source/common/unicode/dbbi.h
  ./source/common/unicode/parseerr.h
  ./source/common/unicode/ubidi.h
  ./source/common/unicode/udata.h
  ./source/common/unicode/uobject.h
  ./source/common/unicode/utf32.h
  ./source/common/unicode/docmain.h
  ./source/common/unicode/parsepos.h
  ./source/common/unicode/ubrk.h
  ./source/common/unicode/uenum.h
  ./source/common/unicode/urename.h
  ./source/common/unicode/utf8.h
  ./source/common/unicode/dtintrv.h
  ./source/common/unicode/platform.h
  ./source/common/unicode/ucasemap.h
  ./source/common/unicode/uidna.h
  ./source/common/unicode/urep.h
  ./source/common/unicode/utf_old.h
  ./source/common/unicode/enumset.h
  ./source/common/unicode/ptypes.h
  ./source/common/unicode/ucat.h
  ./source/common/unicode/uiter.h
  ./source/common/unicode/ures.h
  ./source/common/unicode/utrace.h
  ./source/common/unicode/errorcode.h
  ./source/common/unicode/putil.h
  ./source/common/unicode/uchar.h
  ./source/common/unicode/uloc.h
  ./source/common/unicode/uscript.h
  ./source/common/unicode/utypes.h
  ./source/common/unicode/icudataver.h
  ./source/common/unicode/rbbi.h
  ./source/common/unicode/ucharstrie.h
  ./source/common/unicode/umachine.h
  ./source/common/unicode/uset.h
  ./source/common/unicode/uvernum.h
  ./source/common/unicode/icuplug.h
  ./source/common/unicode/rep.h
  ./source/common/unicode/ucharstriebuilder.h
  ./source/common/unicode/umisc.h
  ./source/common/unicode/usetiter.h
  ./source/common/unicode/uversion.h
  ./source/i18n/anytrans.h
  ./source/i18n/csrutf8.h
  ./source/i18n/hebrwcal.h
  ./source/i18n/plurrule_impl.h
  ./source/i18n/smpdtfst.h
  ./source/i18n/ucol_wgt.h
  ./source/i18n/astro.h
  ./source/i18n/currfmt.h
  ./source/i18n/identifier_info.h
  ./source/i18n/quant.h
  ./source/i18n/strmatch.h
  ./source/i18n/ucurrimp.h
  ./source/i18n/bocsu.h
  ./source/i18n/dangical.h
  ./source/i18n/indiancal.h
  ./source/i18n/rbt.h
  ./source/i18n/strrepl.h
  ./source/i18n/umsg_imp.h
  ./source/i18n/brktrans.h
  ./source/i18n/dcfmtimp.h
  ./source/i18n/inputext.h
  ./source/i18n/rbt_data.h
  ./source/i18n/taiwncal.h
  ./source/i18n/unesctrn.h
  ./source/i18n/buddhcal.h
  ./source/i18n/decContext.h
  ./source/i18n/islamcal.h
  ./source/i18n/rbt_pars.h
  ./source/i18n/titletrn.h
  ./source/i18n/uni2name.h
  ./source/i18n/casetrn.h
  ./source/i18n/decNumber.h
  ./source/i18n/japancal.h
  ./source/i18n/rbt_rule.h
  ./source/i18n/tolowtrn.h
  ./source/i18n/uspoof_conf.h
  ./source/i18n/cecal.h
  ./source/i18n/decNumberLocal.h
  ./source/i18n/msgfmt_impl.h
  ./source/i18n/rbt_set.h
  ./source/i18n/toupptrn.h
  ./source/i18n/uspoof_impl.h
  ./source/i18n/chnsecal.h
  ./source/i18n/decfmtst.h
  ./source/i18n/name2uni.h
  ./source/i18n/regexcmp.h
  ./source/i18n/transreg.h
  ./source/i18n/uspoof_wsconf.h
  ./source/i18n/coptccal.h
  ./source/i18n/digitlst.h
  ./source/i18n/nfrlist.h
  ./source/i18n/regexcst.h
  ./source/i18n/tridpars.h
  ./source/i18n/usrchimp.h
  ./source/i18n/cpdtrans.h
  ./source/i18n/dtitv_impl.h
  ./source/i18n/nfrs.h
  ./source/i18n/regeximp.h
  ./source/i18n/tzgnames.h
  ./source/i18n/vzone.h
  ./source/i18n/csdetect.h
  ./source/i18n/dtptngen_impl.h
  ./source/i18n/nfrule.h
  ./source/i18n/regexst.h
  ./source/i18n/tznames_impl.h
  ./source/i18n/windtfmt.h
  ./source/i18n/csmatch.h
  ./source/i18n/esctrn.h
  ./source/i18n/nfsubs.h
  ./source/i18n/regextxt.h
  ./source/i18n/ucln_in.h
  ./source/i18n/winnmfmt.h
  ./source/i18n/csr2022.h
  ./source/i18n/ethpccal.h
  ./source/i18n/nortrans.h
  ./source/i18n/region_impl.h
  ./source/i18n/ucol_bld.h
  ./source/i18n/wintzimpl.h
  ./source/i18n/csrecog.h
  ./source/i18n/fmtableimp.h
  ./source/i18n/nultrans.h
  ./source/i18n/reldtfmt.h
  ./source/i18n/ucol_cnt.h
  ./source/i18n/zonemeta.h
  ./source/i18n/csrmbcs.h
  ./source/i18n/fphdlimp.h
  ./source/i18n/numsys_impl.h
  ./source/i18n/remtrans.h
  ./source/i18n/ucol_elm.h
  ./source/i18n/zrule.h
  ./source/i18n/csrsbcs.h
  ./source/i18n/funcrepl.h
  ./source/i18n/olsontz.h
  ./source/i18n/scriptset.h
  ./source/i18n/ucol_imp.h
  ./source/i18n/ztrans.h
  ./source/i18n/csrucode.h
  ./source/i18n/gregoimp.h
  ./source/i18n/persncal.h
  ./source/i18n/selfmtimpl.h
  ./source/i18n/ucol_tok.h
  ./source/io/locbund.h
  ./source/io/ucln_io.h
  ./source/io/ufile.h
  ./source/io/ufmt_cmn.h
  ./source/io/uprintf.h
  ./source/io/uscanf.h
)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

#Add group for sources
source_group(common REGULAR_EXPRESSION "/source/common/*")
source_group(common\\unicode REGULAR_EXPRESSION "/source/common/unicode/*")
source_group(common\\i18n REGULAR_EXPRESSION "/source/i18n/*")
source_group(common\\io REGULAR_EXPRESSION "/source/io/*")

if (APPLE)
  SET(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wextra -Wpedantic -Wdeprecated-declarations -Wno-unknown-pragmas -Wno-unused-parameter")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -o0 -D_DEBUG -DDEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -DRELEASE")
elseif (UNIX)
  SET(CMAKE_CXX_FLAGS "-std=c++14 -Wall -WExtra -Wpedantic -Wdeprecated-declarations -Wno-unknown-pragmas -Wno-unused-parameter")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -o0 -D_DEBUG -DDEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -DRELEASE")
elseif (MSVC)
  set(CMAKE_CXX_FLAGS "/DWIN32 /D_WINDOWS /DUNICODE /D_UNICODE /D_CRT_SECURE_NO_WARNINGS /D_CRT_NON_CONFORMING_SWPRINTFS /Zm1000 /bigobj /EHsc /GR /MP /Oy- /W4 /wd4100 /wd4127 /wd4132 /wd4133 /wd4189 /wd4244 /wd4245 /wd4310 /wd4312 /wd4355 /wd4389 /wd4456 /wd4458 /wd4505 /wd4510 /wd4512 /wd4610 /wd4701 /wd4702 /wd4706 /wd4996")
  set(CMAKE_CXX_FLAGS_DEBUG "/MTd /Od /Zi /RTC1 /D_DEBUG /DDEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "/MT /Gy /O2 /Oi /GL- /DNDEBUG /DRELEASE")
endif ()

if (APPLE)
  set(STANDARD_LINK_LIBRARIES pthread)
elseif(UNIX)
  set(STANDARD_LINK_LIBRARIES dl pthread rt)
elseif(MSVC)
  set(STANDARD_LINK_LIBRARIES Ws2_32.lib Iphlpapi.lib Rpcrt4.lib)
endif ()

enable_testing()
 
ADD_DEFINITIONS(-DU_STATIC_IMPLEMENTATION)
ADD_DEFINITIONS(-DU_COMMON_IMPLEMENTATION)
ADD_DEFINITIONS(-DU_I18N_IMPLEMENTATION)
ADD_DEFINITIONS(-DU_IO_IMPLEMENTATION)

if(UNIX)
  ADD_DEFINITIONS(-DU_USING_ICU_NAMESPACE=1)
  if(APPLE)
    ADD_DEFINITIONS(-DU_HAVE_NL_LANGINFO_CODESET=1)
  else(APPLE)
    ADD_DEFINITIONS(-DU_HAVE_NL_LANGINFO_CODESET=0)
  endif(APPLE)
  ADD_DEFINITIONS(-D__STDC_INT64__)
  ADD_DEFINITIONS(-DU_TIMEZONE=0)
  ADD_DEFINITIONS(-DUCONFIG_NO_LEGACY_CONVERSION=1)
  ADD_DEFINITIONS(-DUCONFIG_NO_BREAK_ITERATION=1)
  ADD_DEFINITIONS(-DUCONFIG_NO_COLLATION=1)
  ADD_DEFINITIONS(-DUCONFIG_NO_FORMATTING=1)
  ADD_DEFINITIONS(-DUCONFIG_NO_TRANSLITERATION=0)
  ADD_DEFINITIONS(-DUCONFIG_NO_REGULAR_EXPRESSIONS=1)
endif(UNIX)

include_directories( ./source/common ./source/common/unicode ./source/i18n ./source/io)
add_library(icu STATIC ${include_files} ${source_files}) 

target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)

if(NOT CMAKE_DEBUG_POSTFIX)
  set(CMAKE_DEBUG_POSTFIX d)
endif()

if (APPLE)
  set(STANDARD_LINK_LIBRARIES pthread)	
elseif(UNIX)
  set(STANDARD_LINK_LIBRARIES dl pthread rt)
elseif(MSVC)
  set(STANDARD_LINK_LIBRARIES Ws2_32.lib Iphlpapi.lib Rpcrt4.lib)    
endif ()	
target_link_libraries(${PROJECT_NAME} ${STANDARD_LINK_LIBRARIES})

if (APPLE OR UNIX)
  set(HOME $ENV{HOME})
elseif (MSVC)
  set(HOME $ENV{HOMEDRIVE}$ENV{HOMEPATH} CACHE PATH "Home path")
endif()
set(CMAKE_INSTALL_PREFIX "${HOME}/Libraries/${PLATFORM_NAME}/${PROJECT_NAME}/${PROJECT_VERSION}${INSTALL_REV}")
install(EXPORT ${PROJECT_NAME} DESTINATION cmake/)
install(FILES ${PROJECT_NAME}Config.cmake DESTINATION cmake) 
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME} DESTINATION lib) 
install(FILES ${include_files} DESTINATION include)

if(MSVC)
  set(DEBUG_PDB "$<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX}.pdb")
  set(RELEASE_PDB "$<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}.pdb")
  target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:Debug>:/Fd${DEBUG_PDB}>")
  target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:Release>:/Fd${RELEASE_PDB}>")
  install(FILES "$<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}${CMAKE_DEBUG_POSTFIX}.pdb" DESTINATION lib CONFIGURATIONS Debug OPTIONAL)
  install(FILES "$<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}.pdb" DESTINATION lib CONFIGURATIONS Release OPTIONAL)
endif()
